--- a/README.org
+++ b/README.org
@@ -188,6 +188,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  =:habit= :: Group habit items (items which have a =STYLE: habit= Org property).
 +  =:heading-regexp= :: Group items whose headings match any of the given regular expressions.
 +  =:log= :: Group Agenda Log Mode items.  Argument may be ~close~ or ~closed~ to select items closed today; ~clock~ or ~clocked~ to select items clocked today; ~changed~ or ~state~ to select items whose to-do state was changed today; ~t~ to select any logged item, or ~nil~ to select any non-logged item.  (See also variable ~org-agenda-log-mode-items~.)  Note that these items may also be matched by the ~:time-grid~ selector, so if you want these displayed in their own group, you may need to select them in a group before a group containing the ~:time-grid~ selector.
++  ~:pred~ :: Group items if any of the given predicate functions return non-nil when called with each item as a string from the agenda buffer ([[examples.org#by-predicate][example]]).
 +  =:priority= :: Group items that match any of the given priorities.  Argument may be a string or list of strings, which should be the priority letter, e.g. ~A~.
 +  =:priority>= :: Group items that are higher than the given priority, e.g. ~C~.
 +  =:priority>== :: Group items that are higher than or equal to the given priority, e.g. ~B~.
@@ -219,6 +220,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Face ~org-super-agenda-header~, which can be used to customize group headers.  (Thanks to [[https://github.com/cslux][Christian Schwarzgruber]].)
 +  Selector ~:auto-map~, which groups items by the value returned when applying items to a function.
 +  Selector ~:file-path~, which groups items by regular expressions matched against their buffers' filename paths.
++  Selector ~:pred~, which matches if any of the given predicate functions return non-nil when called with the item string from the agenda buffer.
 
 *Internal*
 +  Refactor auto-groups with macro.
