--- a/README.org
+++ b/README.org
@@ -200,6 +200,13 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  =:time-grid= :: Group items that appear on the time grid.
 +  =:todo= :: Group items that match any of the given TODO keywords.  Argument may be a string or list of strings, or ~t~ to match any keyword, or ~nil~ to match only non-todo items.
 
+*** ~:auto-map~ helper functions
+
+These functions can be passed to the ~:auto-map~ selector to easily group items by certain attributes:
+
++  ~org-super-agenda--dir-name~ :: Return the item's directory name, prepended with =Directory:=, or nil if none.
++  ~org-super-agenda--parent-heading~ :: Return the item's parent heading, or nil if none.
+
 ** Tips
 
 +  An [[info:org-super-agenda][info page]] is included, with the contents of this readme file.
@@ -221,6 +228,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Selector ~:auto-map~, which groups items by the value returned when applying items to a function.
 +  Selector ~:file-path~, which groups items by regular expressions matched against their buffers' filename paths.
 +  Selector ~:pred~, which matches if any of the given predicate functions return non-nil when called with the item string from the agenda buffer.
++  Helper functions for the ~:auto-map~ selector: ~org-super-agenda--dir-name~ and ~org-super-agenda--parent-heading~.
 
 *Internal*
 +  Refactor auto-groups with macro.
