Add: org-super-agenda-unmatched-name variable
Fixes #65.  Thanks to Marcin Swieczkowski (@m-cat).

--- a/README.org
+++ b/README.org
@@ -230,6 +230,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Selector ~:auto-parent~, which groups items by their parent heading.
 +  Selector =:auto-todo=, which groups items by their to-do keyword.
 +  Selector =:auto-priority=, which groups items by their priority.
++  Option ~org-super-agenda-unmatched-name~, used to change the name of the unmatched group.
 
 *Internal*
 +  Refactor auto-groups with macro.
