--- a/README.org
+++ b/README.org
@@ -216,6 +216,10 @@ These selectors take one argument alone, or multiple arguments in a list.
 :TOC:      0
 :END:
 
+** 1.2-pre
+
+Nothing yet.
+
 ** 1.1
 
 *Additions*
