--- a/images/screenshots/index.org
+++ b/images/screenshots/index.org
@@ -17,3 +17,5 @@ Here are some more screenshots.  While the screenshot in the readme file was tak
 ** Contributed screenshots
 
 [[bascht.png]]
+
+[[zaen323.png]]
