Added variable with extra header properties

--- a/README.org
+++ b/README.org
@@ -229,6 +229,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Option ~org-super-agenda-date-format~, used to format date headers in the ~:auto-date~ selector.
 +  To-do keyword faces are applied to keywords in group headers.
 +  Option =org-super-agenda-header-separator= may also be a character, which is automatically repeated to the window width.  (Thanks to [[https://github.com/sheepduke][YUE Daian]].)
++  Option =org-super-agenda-header-properties=.  It sets =org-agenda-structural-header= by default, which enables navigating to headers with the default =M-{= / =M-}= bindings in agenda buffers.  (Thanks to [[https://github.com/haji-ali][Abdul-Lateef Haji-Ali]].)
 
 *Changed*
 +  Group headers face is now appended to face list instead of overriding it.
