--- a/README.org
+++ b/README.org
@@ -220,6 +220,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 
 *Fixed*
 +  =:children todo= group selection ([[https://github.com/alphapapa/org-super-agenda/issues/75][#75]]).  (Thanks to [[https://github.com/bleggett][Ben Leggett]].)
++  =:children= group headings.
 
 ** 1.1.1
 
