--- a/test/test.org
+++ b/test/test.org
@@ -17,7 +17,7 @@ DEADLINE: <2017-07-15 Sat -1m>
 
  I'd like to be finished with this before the weekend...
 
-**** TODO [#A] Skype with president of Antarctica            :world:meetings:
+**** TODO [#A] Skype with president of Antarctica            :meetings:
      SCHEDULED: <2017-07-04 Tue 21:00>
 
   Not sure what his timezone is...
@@ -35,7 +35,7 @@ DEADLINE: <2017-07-15 Sat -1m>
 
   Just waiting on that callback from NASA...
 *** TODO Practice leaping tall buildings in a single bound         :personal:
-    SCHEDULED: <2017-07-05 Wed +2d>
+    SCHEDULED: <2017-07-05 Wed .+2d>
     :PROPERTIES:
     :STYLE:    habit
     :END:
