--- a/README.org
+++ b/README.org
@@ -216,6 +216,11 @@ These selectors take one argument alone, or multiple arguments in a list.
 :TOC:      0
 :END:
 
+** 1.1.1
+
+*Fixed*
++  Selector =:auto-dir-name= did not handle items without markers
+
 ** 1.1
 
 *Additions*
