--- a/README.org
+++ b/README.org
@@ -281,6 +281,14 @@ If you find this useful, I'd appreciate if you would share a screenshot or two o
 
 + The =org-search-view= agenda command does not seem to set the =todo-state= text property for items it finds, so the =:todo= selector doesn't work with it.  We should be able to work around this by getting the todo state for each item manually, but we have to make sure that we only do that when necessary, otherwise it might be slow.  And I wouldn't be surprised if there are other selectors that don't work with this or other commands, but =org-agenda-list= should work fine, and =org-tags-view= and =org-todo-list= seem to work.
 
+** Tests
+
+It's easy to run the tests:
+
+1.  Install [[https://github.com/cask/cask][Cask]].
+2.  From the repo root directory, run =cask install=, which installs Emacs and package dependencies into the =.cask= directory.
+3.  Run =make test=.
+
 * Credits
 :PROPERTIES:
 :TOC:      ignore
